--- a/src/app/mainLayout/side-bar/side-bar.component.html
+++ b/src/app/mainLayout/side-bar/side-bar.component.html
@@ -1,1 +1,72 @@
-<p>side-bar works!</p>
+<div class="container">
+  <div class="logo">
+    <img src="../../../assets/images/logo.svg" alt="logo" />
+  </div>
+  <ul class="tabs">
+    <li
+      class="control-pannel"
+      routerLinkActive="active"
+      routerLink="control-pannel"
+    >
+      <img src="../../../assets/images/Home.svg" alt="home" />
+      <a>لوحة التحكم</a>
+    </li>
+    <li class="profile" routerLinkActive="active" routerLink="profile">
+      <img src="../../../assets/images/profile.svg" alt="حسابى" />
+      <a>حسابى</a>
+    </li>
+    <li
+      class="consultation"
+      routerLinkActive="active"
+      routerLink="consultations"
+    >
+      <img src="../../../assets/images/consultation.svg" alt="استشاراتى" />
+      <a>استشاراتى</a>
+    </li>
+    <li class="reservation" routerLinkActive="active" routerLink="reservation">
+      <img src="../../../assets/images/desk 1.png" alt="حجز المكتب" />
+      <a>حجز المكتب</a>
+    </li>
+    <li class="videos" routerLinkActive="active" routerLink="videos">
+      <img src="../../../assets/images/videos.svg" alt="فيديوهات" />
+      <a>فيديوهات</a>
+    </li>
+    <li class="news-feed" routerLinkActive="active" routerLink="news-feed">
+      <img src="../../../assets/images/news.svg" alt="الاخبار والتحديثات" />
+      <a>الاخبار والتحديثات</a>
+    </li>
+    <li class="dictionary" routerLinkActive="active" routerLink="dictionary">
+      <img src="../../../assets/images/dictionary.svg" alt="قاموس القانون" />
+      <a>قاموس القانون</a>
+    </li>
+    <li
+      class="common-questions"
+      routerLinkActive="active"
+      routerLink="common-questions"
+    >
+      <div>
+        <img
+          src="../../../assets/images/Chat Square.svg"
+          alt="الأسئلة الشائعة"
+        />
+        <img src="../../../assets/images/questions.svg" alt="" />
+      </div>
+
+      <a>الأسئلة الشائعة</a>
+    </li>
+    <li class="forum" routerLinkActive="active" routerLink="forum">
+      <img src="../../../assets/images/forum.svg" alt="المنتدي " />
+      <a>المنتدي </a>
+    </li>
+  </ul>
+  <ul class="specialTabs">
+    <li class="settings" routerLinkActive="active" routerLink="settings">
+      <img src="../../../assets/images/settings.svg" alt="الاعدادات " />
+      <a>الاعدادات </a>
+    </li>
+    <li class="settings" routerLinkActive="active" routerLink="settings">
+      <img src="../../../assets/images/sign out.svg" alt=" تسجيل الخروج" />
+      <a>تسجيل الخروج </a>
+    </li>
+  </ul>
+</div>
