--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div  class="legalAdvice">
-  <div  class="sideBarLegal">
-    <app-side-bar></app-side-bar>
-  </div>
-  <div  class="legalAdviceContent">
+<div dir="rtl" class="legalAdvice">
+  <div class="legalAdviceContent">
     <app-header></app-header>
     <router-outlet></router-outlet>
+  </div>
+  <div class="sideBarLegal">
+    <app-side-bar></app-side-bar>
   </div>
 </div>
