--- a/src/app/mainLayout/header/header.component.html
+++ b/src/app/mainLayout/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<div class="header">
+  <div class="search-bar">
+    <img src="../../../assets/images/search.svg" alt="" />
+    <input type="text" placeholder="ادخل كلمه البحث هنا" />
+  </div>
+  <div class="info">
+    <div class="profile">
+      <img src="../../../assets/images/Ellipse 1.png" alt="" />
+      <div>
+        <span>سامر</span>
+        <span>مسؤل</span>
+      </div>
+    </div>
+    <div class="notification">
+      <img src="../../../assets/images/notification.svg" alt="" />
+    </div>
+  </div>
+</div>
