--- a/src/app/mainLayout/mainContent/control-pannel/control-pannel.component.html
+++ b/src/app/mainLayout/mainContent/control-pannel/control-pannel.component.html
@@ -1,1 +1,12 @@
-<p>control-pannel works!</p>
+<div class="control-pannel">
+  <p class="title">لوحة التحكم</p>
+  <div class="cards">
+    <div *ngFor="let number of numbers" class="card">
+      <p>لوحة التحكم</p>
+      <div>
+        <img src="../../../../assets/images/consultation brown.svg" alt="" />
+        <span>11</span>
+      </div>
+    </div>
+  </div>
+</div>
