--- a/src/app/mainLayout/mainContent/profile/profile.component.html
+++ b/src/app/mainLayout/mainContent/profile/profile.component.html
@@ -1,1 +1,28 @@
-<p>profile works!</p>
+<div class="profile">
+  <p>الملف الشخصي</p>
+  <form>
+    <div class="image">
+      <img src="../../../../assets/images/man.png" alt="" />
+      <img src="../../../../assets/images/pen.svg" alt="" />
+    </div>
+    <div>
+      <label for="name">الاسم</label>
+      <input type="text" name="name" id="" />
+      <label for="email">البريد الاليكتروني</label>
+      <input type="email" name="email" id="" />
+    </div>
+    <div>
+      <label for="phone">رقم الهاتف</label>
+      <input type="tel" name="" id="" />
+      input
+    </div>
+    <div>
+      <label for="experiences">الخبرات</label>
+      <input type="text" name="experiences" id="" />
+    </div>
+    <div>
+      <label for="qual">نبذة عني</label>
+      <input type="text" name="qual" id="" />
+    </div>
+  </form>
+</div>
