--- a/src/app/mainLayout/side-bar/side-bar.component.html
+++ b/src/app/mainLayout/side-bar/side-bar.component.html
@@ -44,7 +44,7 @@
       routerLinkActive="active"
       routerLink="common-questions"
     >
-      <div>
+      <div class="special-pic">
         <img
           src="../../../assets/images/Chat Square.svg"
           alt="الأسئلة الشائعة"
@@ -52,7 +52,7 @@
         <img src="../../../assets/images/questions.svg" alt="" />
       </div>
 
-      <a>الأسئلة الشائعة</a>
+      <a class="samer">الأسئلة الشائعة</a>
     </li>
     <li class="forum" routerLinkActive="active" routerLink="forum">
       <img src="../../../assets/images/forum.svg" alt="المنتدي " />
