--- a/src/app/mainLayout/mainContent/consultations/consultations.component.html
+++ b/src/app/mainLayout/mainContent/consultations/consultations.component.html
@@ -1,1 +1,15 @@
-<p>consultations works!</p>
+<div class="consultations">
+  <p>الاستشارات القانونية</p>
+  <div class="table">
+    <div class="header">
+      <div class="pic">
+        <img src="../../../../assets/images/lolipop l.svg" alt="" />
+        <img src="../../../../assets/images/lolipop r.svg" alt="" />
+      </div>
+      <div class="btns">
+        <button class="active">فعال</button>
+        <button>غير فعال</button>
+      </div>
+    </div>
+  </div>
+</div>
