--- a/src/app/mainLayout/mainContent/profile/profile.component.html
+++ b/src/app/mainLayout/mainContent/profile/profile.component.html
@@ -4,25 +4,45 @@
     <div class="image">
       <img src="../../../../assets/images/man.png" alt="" />
       <img src="../../../../assets/images/pen.svg" alt="" />
+      <span>سامر نسيم</span>
     </div>
     <div>
-      <label for="name">الاسم</label>
-      <input type="text" name="name" id="" />
-      <label for="email">البريد الاليكتروني</label>
-      <input type="email" name="email" id="" />
+      <div>
+        <label for="name">الاسم</label>
+        <input type="text" name="name" id="" />
+      </div>
+      <div>
+        <label for="email">البريد الاليكتروني</label>
+        <input type="email" name="email" id="" />
+      </div>
     </div>
     <div>
-      <label for="phone">رقم الهاتف</label>
-      <input type="tel" name="" id="" />
-      input
+      <div>
+        <label for="phone">رقم الهاتف</label>
+        <input type="tel" name="" id="" />
+      </div>
+      <div>
+        <label for="address">العنوان</label>
+        <input type="text" name="address" id="" />
+      </div>
     </div>
     <div>
-      <label for="experiences">الخبرات</label>
-      <input type="text" name="experiences" id="" />
+      <div>
+        <label for="experiences">الخبرات</label>
+        <input type="text" name="experiences" id="" />
+      </div>
+      <div>
+        <label for="hint">نبذة عني</label>
+        <input type="text" name="hint" id="" />
+      </div>
     </div>
     <div>
-      <label for="qual">نبذة عني</label>
-      <input type="text" name="qual" id="" />
+      <div>
+        <label for="qual">المؤهلات</label>
+        <input type="text" name="qual" id="" />
+      </div>
+      <div></div>
     </div>
+    <button type="submit">حفظ</button>
   </form>
 </div>
