--- a/src/app/mainLayout/mainContent/profile/profile.component.scss
+++ b/src/app/mainLayout/mainContent/profile/profile.component.scss
@@ -1,5 +1,7 @@
 @import "../../../../assets/scss/sharedStyles/variables.scss";
 .profile {
+  padding: 30px;
+
   p {
     color: $primary-color;
     font-size: 24px;
@@ -8,5 +10,67 @@
     line-height: 24px;
   }
   form {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    .image {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      position: relative;
+      width: auto;
+
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      img:nth-of-type(2) {
+        position: absolute;
+        background-color: $background;
+        width: 30px;
+        height: 30px;
+        bottom: 10px;
+        right: 0;
+      }
+      span {
+        margin-right: 20px;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 24px; /* 100% */
+      }
+    }
+    div {
+      display: flex;
+      div {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        margin: 20px;
+        label {
+          padding: 10px 0;
+        }
+      }
+    }
+    button {
+      align-self: center;
+      width: 50%;
+      padding: 10px;
+      margin-top: 20px;
+      background-color: $primary-color;
+      color: #fff;
+      border-radius: 10px;
+      border: none;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      cursor: pointer;
+    }
   }
 }
